@@ -13,6 +13,7 @@ Specifications:
 - Simple switched I/O ports (no software yet);
 - Multiple boards;
 - 15/31KHz configurable.
+- Scanlines configurable.
 
 In the project there is a loader to boot and load ROMs and configuration from SD card.
 
@@ -20,14 +21,16 @@ The "CONFIG.TXT" configuration file is self-explanatory.
 
 ## Use
 
-Format an SD Card in FAT16 (max 4GB), put the NEXTOR.SYS and COMMAND2.COM files, create a directory called MSX1FGPA, put the CONFIG.TXT and KEYMAPs in this directory. Put ROMs and Utilities in the SD Card for MSX use.
+Format an SD Card in FAT16 (max 4GB), put the NEXTOR.SYS and COMMAND2.COM files, create a directory called 'MSX1FGPA', put the CONFIG.TXT and KEYMAPs in this directory. Put ROMs and Utilities in the SD Card for MSX use.
+PS: Due to a Nextor bug, FAT16 partitions with ID 0x0E are not recognized, only with ID 0x06.
 
 Some keys and their functions:
 
  - Print Screen: Toggle VGA mode;
- - F12: Toggle Turbo mode;
+ - Scroll Lock: Toggle Scanlines mode;
+ - F11: Toggle Turbo mode;
  - CTRL+ALT+DEL = Soft Reset;
  - CTRL+ALT+F12 = Hard Reset;
- - CTRL+ALT+BACKSPACE = For ZX-Uno only: reload FPGA
+ - CTRL+ALT+BACKSPACE = For ZX-Uno based boards only: reload FPGA
 
-Uses the ROMLOAD utility for ROM loading and executing (simple, megaroms or SCC).s
+Uses the ROMLOAD utility for ROM loading and executing (simple, megaroms or SCC).
