@@ -204,7 +204,7 @@ begin
 	-- The MSX1
 	the_msx: entity work.msx
 	generic map (
-		hw_id_g			=> 8,
+		hw_id_g			=> 6,
 		hw_txt_g			=> "ZX-Uno Board",
 		hw_version_g	=> X"11",				-- Version 1.1
 		video_opt_g		=> 1						-- 1 = dblscan configurable
