@@ -167,7 +167,7 @@
       <association xil_pn:name="BehavioralSimulation" xil_pn:seqID="101"/>
       <association xil_pn:name="Implementation" xil_pn:seqID="0"/>
     </file>
-    <file xil_pn:name="wxedax_pins.ucf" xil_pn:type="FILE_UCF">
+    <file xil_pn:name="../../src/syn-wxedax/wxedax_pins.ucf" xil_pn:type="FILE_UCF">
       <association xil_pn:name="Implementation" xil_pn:seqID="0"/>
     </file>
     <file xil_pn:name="../../src/video/vdp18/vdp18_palette.vhd" xil_pn:type="FILE_VHDL">
